# WordEmbeddingPortugues

./: README.md  pyproject.toml  requirements.txt
data/corpus/: README.md
data/embedding/: README.md
models/: README.md
notebooks/: word2vec_embeddings.ipynb
src/data/processing/: utils.py
src/data/scraping/embedding/: bula_extractor.py  compress.py  corpus_generator.py  elpais_extractor.py  fapesp_extractor.py  frases_extractor.py  g1_extractor.py  history_extractor.py  livros_generator.py  ms_extractor.py  olhar_extractor.py  oscar_extractor.py  r7_extractor.py  super_extractor.py  textos_generator.py  uol_extractor.py  utils.py  wiki_extractor.py
src/model/: embedding.py
